--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
             try {
                 //FastAPI endpoint
-                const response = await fetch('https://carbosense-genai-based-carbon-footprint.onrender.com', {
+                const response = await fetch('https://carbosense-genai-based-carbon-footprint.onrender.com/analyze', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
